Fix serialization and deserialization issues for Guild homes and claims
- Ensure Guild homes are correctly serialized and deserialized as Maps.
- Update YamlGuildStorage to handle homes and claims in the correct format.
- Add proper error handling for invalid world names in claims and homes.
- Ensure consistent format for claims and homes in YAML files.
- Improve logging for loading and saving guild data.